--- a/index.html
+++ b/index.html
@@ -122,13 +122,22 @@
       margin: 20px 0;
     }
 
-    .palette-img {
-      display: block;
-      margin: 30px auto 0;
-      max-width: 90%;
-      height: auto;
-      border-radius: 20px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    .color-dots {
+      display: flex;
+      justify-content: center;
+      margin-top: 30px;
+      gap: 0;
+    }
+
+    .color-dots div {
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      box-shadow: 0 2px 6px rgba(0,0,0,0.2);
+    }
+
+    .color-dots div:not(:first-child) {
+      margin-left: -20px;
     }
 
     @media (max-width: 600px) {
@@ -136,9 +145,17 @@
         flex-direction: row;
         gap: 20px;
       }
+
+      .color-dots div {
+        width: 50px;
+        height: 50px;
+      }
+
+      .color-dots div:not(:first-child) {
+        margin-left: -15px;
+      }
     }
   </style>
-
   <link href="https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap" rel="stylesheet">
 </head>
 <body>
@@ -189,13 +206,14 @@
     <p>Мы очень старались сделать праздник красивым<br/>
       и будем рады, если в своих нарядах Вы поддержите<br/>
       цветовую гамму нашей свадьбы!</p>
-    <!-- Круги цветов -->
-    <div style="display: flex; justify-content: center; gap: 20px; margin-top: 30px;">
-      <div style="width: 60px; height: 60px; background-color: #5C4033; border-radius: 50%;"></div>
-      <div style="width: 60px; height: 60px; background-color: #f5f5dc; border-radius: 50%;"></div>
-      <div style="width: 60px; height: 60px; background-color: #ffffff; border-radius: 50%;"></div>
-      <div style="width: 60px; height: 60px; background-color: #cccccc; border-radius: 50%;"></div>
-      <div style="width: 60px; height: 60px; background-color: #000000; border-radius: 50%;"></div>
+
+    <!-- Цветовые круги с наложением -->
+    <div class="color-dots">
+      <div style="background-color: #5C4033;"></div> <!-- коричневый -->
+      <div style="background-color: #f5f5dc;"></div> <!-- бежевый -->
+      <div style="background-color: #ffffff;"></div> <!-- белый -->
+      <div style="background-color: #cccccc;"></div> <!-- серый -->
+      <div style="background-color: #000000;"></div> <!-- черный -->
     </div>
   </section>
 
@@ -235,7 +253,7 @@
         <label><input type="radio" name="Напиток" value="Вино" /> Вино</label>
         <label><input type="radio" name="Напиток" value="Шампанское" /> Шампанское</label>
         <label><input type="radio" name="Напиток" value="Текила БУМ" /> Текила БУМ</label>
-        <label><input type="radio" name="Напиток" value="Коньяк" /> Коньяк</label>
+        <label><input type="radio" name="Напиток" value="Виски" /> Виски</label>
         <label>Другое:<br/><input type="text" name="Напиток-другое" placeholder="Напишите свой вариант" /></label>
       </div>
 
